--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -27,7 +27,7 @@ confinement: strict
 
 apps:
   picviewer-kiosk:
-    command: snap/command-chain/desktop-launch $SNAP/usr/bin/imv -f -t 10 $SNAP_COMMON/
+    command: snap/command-chain/desktop-launch $SNAP/usr/bin/imv -b checks -f -t 10 $SNAP_COMMON/
     daemon: simple
     extensions: [ gnome-3-28 ]
     plugs:
