--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -31,6 +31,8 @@ architectures:
   - build-on: amd64
   - build-on: armhf
   - build-on: arm64
+  - build-on: s390x
+  - build-on: ppc64el
 
 apps:
   imv:
